--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
 
     <header>
 
-        <div class="top"></div>
+        <div class="top">
+
+            <div class="text"><buttom>Home</buttom>
+            <buttom>About Us</buttom>
+            <buttom>Areas of Practice</buttom>
+            <buttom>Awards And Publication</buttom>
+            <buttom>Lawyers</buttom>
+            <buttom>Career</buttom>
+            </div>
+
+
+        </div>
 
     </header>
 
