--- a/index.html
+++ b/index.html
@@ -14,12 +14,27 @@
 
         <div class="top">
 
-            <div class="text"><buttom>Home</buttom>
+            <div class="text">
+            
+            <div class="styleButtom">
+            <buttom>Home</buttom>
+            </div>
+            <div class="styleButtom">
             <buttom>About Us</buttom>
+            </div>
+            <div class="styleButtom">
             <buttom>Areas of Practice</buttom>
+            </div>
+            <div class="styleButtom">
             <buttom>Awards And Publication</buttom>
+            </div>
+            <div class="styleButtom">
             <buttom>Lawyers</buttom>
+            </div>
+            <div class="styleButtom">
             <buttom>Career</buttom>
+            </div>
+            
             </div>
 
 
@@ -31,6 +46,7 @@
 
         <div class="background">
 
+        <div class="contain">
         <div class="title"> <h1> Contact Us </h1> </div>
             <form>
                 <div class="title"><h2>If you are interested in our services, complete the form and wait for a return.</h2></div>
@@ -42,9 +58,8 @@
                 <input></input>
                 <div class="text">Topic</div>
                 <input></input>
-
-
             </form>
+            </div>
 
         </div>
 
